--- a/package.json
+++ b/package.json
@@ -38,37 +38,31 @@
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup --minify",
-    "test": "jest",
+    "test": "vitest",
     "lint": "run-s lint:eslint lint:prettier",
     "lint:eslint": "eslint \"{src,scripts,test}/**/*.ts\" *.{js,cjs,ts} --fix --cache",
     "lint:prettier": "prettier --write .",
     "prepare": "husky install",
     "prepublishOnly": "npm run build && np --any-branch --no-yarn --yolo --no-publish --message \"chore: release v%s\""
   },
-  "dependencies": {
-    "kolorist": "^1.8.0"
-  },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
-    "@jest/globals": "^29.7.0",
     "@tomjs/commitlint": "^2.1.1",
     "@tomjs/eslint": "^1.2.1",
     "@tomjs/prettier": "^1.1.1",
     "@tomjs/tsconfig": "^1.2.1",
-    "@types/jest": "^29.5.11",
     "@types/node": "^18.19.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "husky": "^8.0.3",
-    "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
     "np": "^9.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "vitest": "^1.1.0"
   }
 }
