--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsup --minify",
+    "build": "rimraf ./dist && tsup",
     "test": "vitest",
     "lint": "run-s lint:eslint lint:prettier",
     "lint:eslint": "eslint \"{src,scripts,test}/**/*.ts\" *.{js,cjs,ts} --fix --cache",
@@ -46,23 +46,23 @@
     "prepublishOnly": "npm run build && np --any-branch --no-yarn --yolo --no-publish --message \"chore: release v%s\""
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@tomjs/commitlint": "^2.1.1",
-    "@tomjs/eslint": "^1.2.1",
+    "@commitlint/cli": "^18.4.4",
+    "@tomjs/commitlint": "^2.1.2",
+    "@tomjs/eslint": "^1.2.2",
     "@tomjs/prettier": "^1.1.1",
-    "@tomjs/tsconfig": "^1.2.1",
-    "@types/node": "^18.19.3",
+    "@tomjs/tsconfig": "^1.3.0",
+    "@types/node": "^18.19.8",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "np": "^9.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "~5.3.3",
-    "vitest": "^1.1.0"
+    "vitest": "^1.2.1"
   }
 }
