--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "dev": "tsup --watch",
-    "build": "rimraf ./dist && tsup",
+    "build": "vite build",
     "test": "vitest",
     "lint": "run-s lint:eslint lint:prettier",
     "lint:eslint": "eslint \"{src,scripts,test}/**/*.ts\" *.{js,cjs,ts} --fix --cache",
@@ -60,9 +60,10 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
-    "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "~5.3.3",
+    "vite": "^5.0.11",
+    "vite-plugin-dts": "^3.7.1",
     "vitest": "^1.2.1"
   }
 }
