--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@tomjs/utils",
-  "version": "1.1.1",
-  "description": "Pure 'JavaScript' library that can run in the 'browser' and 'node.js'",
+  "name": "@tomjs/utils-packages",
+  "version": "1.0.0",
+  "description": "A collection of functions for `node.js` and `web` projects.",
   "keywords": [
     "tomjs",
     "utils"
@@ -10,42 +10,26 @@
     "name": "Tom Gao",
     "email": "tom@tomgao.cc"
   },
-  "license": "MIT",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs",
-      "types": "./dist/index.d.ts"
-    }
-  },
-  "files": [
-    "dist"
-  ],
+  "private": true,
   "engines": {
     "node": ">=16"
   },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tomjs/utils.git"
-  },
   "scripts": {
-    "dev": "tsup --watch",
-    "build": "vite build",
+    "build": "pnpm -r --stream --filter=@tomjs/* build",
     "test": "vitest",
     "lint": "run-s lint:eslint lint:prettier",
-    "lint:eslint": "eslint \"{src,scripts,test}/**/*.ts\" *.{js,cjs,ts} --fix --cache",
+    "lint:eslint": "eslint \"{packages,scripts}/**/*.ts\" *.{js,cjs,ts} --fix --cache",
     "lint:prettier": "prettier --write .",
-    "prepare": "husky install",
-    "prepublishOnly": "npm run build && np --any-branch --no-yarn --yolo --no-publish --message \"chore: release v%s\""
+    "npd": "run-s np:*",
+    "np": "pnpm build && pnpm lint && run-s np:*",
+    "np:normal": "changeset",
+    "np:version": "changeset version",
+    "np:commit": "tsx ./scripts/changeset/commit",
+    "np:publish": "changeset publish --tag latest && git push --follow-tags",
+    "prepare": "husky install"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "@commitlint/cli": "^18.4.4",
     "@tomjs/commitlint": "^2.1.2",
     "@tomjs/eslint": "^1.2.2",
@@ -65,5 +49,11 @@
     "vite": "^5.0.11",
     "vite-plugin-dts": "^3.7.1",
     "vitest": "^1.2.1"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@changesets/cli@2.27.1": "patches/@changesets__cli@2.27.1.patch",
+      "@changesets/write@0.3.0": "patches/@changesets__write@0.3.0.patch"
+    }
   }
 }
