--- a/package.json
+++ b/package.json
@@ -35,15 +35,18 @@
     "@tomjs/eslint": "^1.3.0",
     "@tomjs/prettier": "^1.3.0",
     "@tomjs/tsconfig": "^1.4.0",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^18.19.8",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
+    "lodash": "^4.17.21",
     "np": "^9.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
+    "simple-git": "^3.22.0",
     "tsx": "^4.7.0",
     "typescript": "~5.3.3",
     "vite": "^5.0.11",
