--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "node": ">=16"
   },
   "scripts": {
-    "build": "pnpm -r --stream --filter=@tomjs/* build",
+    "build": "cross-env VITE_CJS_IGNORE_WARNING=true pnpm -r --stream --filter=@tomjs/* build",
     "test": "vitest",
     "lint": "run-s lint:eslint lint:prettier",
     "lint:eslint": "eslint \"{packages,scripts}/**/*.ts\" *.{js,cjs,ts} --fix --cache",
@@ -26,32 +26,32 @@
     "np:version": "changeset version",
     "np:commit": "tsx ./scripts/changeset/commit",
     "np:publish": "changeset publish --tag latest && git push --follow-tags",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
-    "@commitlint/cli": "^18.4.4",
-    "@tomjs/commitlint": "^2.2.0",
-    "@tomjs/eslint": "^1.3.0",
+    "@commitlint/cli": "^19.1.0",
+    "@tomjs/commitlint": "^3.0.0",
+    "@tomjs/eslint": "^1.5.1",
     "@tomjs/prettier": "^1.3.0",
     "@tomjs/tsconfig": "^1.4.0",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^18.19.8",
+    "@types/lodash": "^4.17.0",
+    "@types/node": "^18.19.23",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
+    "eslint": "^8.57.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "lodash": "^4.17.21",
-    "np": "^9.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "simple-git": "^3.22.0",
-    "tsx": "^4.7.0",
+    "tsx": "^4.7.1",
     "typescript": "~5.3.3",
-    "vite": "^5.0.11",
-    "vite-plugin-dts": "^3.7.1",
-    "vitest": "^1.2.1"
+    "vite": "^5.1.6",
+    "vite-plugin-dts": "^3.7.3",
+    "vite-plugin-target": "^0.1.1",
+    "vitest": "^1.3.1"
   },
   "pnpm": {
     "patchedDependencies": {
