--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "@tomjs/tsconfig/node.json",
-  "include": ["src/**/*.ts", "src/**/*.d.ts"]
+  "include": ["src"],
+  "compilerOptions": {
+    "types": ["vitest/globals"]
+  }
 }
