--- a/package.json
+++ b/package.json
@@ -2,61 +2,38 @@
   "name": "@tomjs/utils-packages",
   "version": "1.0.0",
   "description": "A collection of functions for `node.js` and `web` projects.",
-  "keywords": [
-    "tomjs",
-    "utils"
-  ],
-  "author": {
-    "name": "Tom Gao",
-    "email": "tom@tomgao.cc"
-  },
   "private": true,
   "engines": {
     "node": ">=16"
   },
+  "packageManager": "pnpm@9.1.1",
   "scripts": {
     "build": "cross-env VITE_CJS_IGNORE_WARNING=true pnpm -r --stream --filter=@tomjs/* build",
     "test": "cross-env VITE_CJS_IGNORE_WARNING=true vitest",
     "lint": "run-s lint:eslint lint:prettier",
-    "lint:eslint": "eslint \"{packages,scripts}/**/*.ts\" *.{js,cjs,ts} --fix --cache",
+    "lint:eslint": "eslint \"packages/**/*.ts\" *.{js,cjs,ts} --fix --cache",
     "lint:prettier": "prettier --write .",
-    "npd": "run-s np:*",
-    "np": "pnpm build && pnpm lint && run-s np:*",
-    "np:normal": "changeset",
-    "np:version": "changeset version",
-    "np:commit": "tsx ./scripts/changeset/commit",
-    "np:publish": "changeset publish --tag latest && git push --follow-tags",
     "prepare": "husky"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.1",
-    "@commitlint/cli": "^19.1.0",
+    "@commitlint/cli": "^19.3.0",
     "@tomjs/commitlint": "^3.0.0",
-    "@tomjs/eslint": "^1.5.1",
+    "@tomjs/eslint": "^2.3.0",
     "@tomjs/prettier": "^1.3.0",
-    "@tomjs/tsconfig": "^1.4.0",
-    "@types/lodash": "^4.17.0",
-    "@types/node": "^18.19.23",
+    "@tomjs/tsconfig": "^1.5.0",
+    "@types/node": "^18.19.33",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
-    "rimraf": "^5.0.5",
-    "simple-git": "^3.22.0",
-    "tsx": "^4.7.1",
-    "typescript": "~5.3.3",
-    "vite": "^5.1.6",
-    "vite-plugin-dts": "^3.7.3",
+    "rimraf": "^5.0.7",
+    "tsx": "^4.10.3",
+    "typescript": "~5.4.5",
+    "vite": "^5.2.11",
+    "vite-plugin-dts": "^3.9.1",
     "vite-plugin-target": "^0.1.1",
-    "vitest": "^1.3.1"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "@changesets/cli@2.27.1": "patches/@changesets__cli@2.27.1.patch",
-      "@changesets/write@0.3.0": "patches/@changesets__write@0.3.0.patch"
-    }
+    "vitest": "^1.6.0"
   }
 }
