chore: modify changelog and package.json

--- a/packages/node-utils/package.json
+++ b/packages/node-utils/package.json
@@ -38,7 +38,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tomjs/utils.git"
+    "url": "git+https://github.com/tomjs/utils.git",
+    "directory": "packages/node-utils"
   },
   "scripts": {
     "build": "vite build",
