--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "node": ">=16"
   },
   "packageManager": "pnpm@9.1.1",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "cross-env VITE_CJS_IGNORE_WARNING=true pnpm -r --stream --filter=@tomjs/* build",
     "test": "cross-env VITE_CJS_IGNORE_WARNING=true vitest",
@@ -17,10 +20,10 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
-    "@tomjs/commitlint": "^3.0.0",
-    "@tomjs/eslint": "^2.3.0",
-    "@tomjs/prettier": "^1.3.0",
-    "@tomjs/tsconfig": "^1.5.0",
+    "@tomjs/commitlint": "^3.2.0",
+    "@tomjs/eslint": "^3.0.1",
+    "@tomjs/prettier": "^1.4.1",
+    "@tomjs/tsconfig": "^1.6.0",
     "@types/node": "^18.19.33",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
@@ -29,7 +32,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.7",
-    "tsx": "^4.10.3",
+    "tsx": "^4.10.5",
     "typescript": "~5.4.5",
     "vite": "^5.2.11",
     "vite-plugin-dts": "^3.9.1",
