--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,7 +1,4 @@
 {
   "extends": "@tomjs/tsconfig/node.json",
-  "include": ["src"],
-  "compilerOptions": {
-    "types": ["vitest/globals"]
-  }
+  "include": ["src"]
 }
