--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tomjs/node-utils",
+  "name": "@tomjs/node",
   "version": "1.0.2",
   "description": "A collection of functions for `node.js` projects",
   "keywords": [
