--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -43,7 +43,7 @@
     "directory": "packages/utils"
   },
   "scripts": {
-    "build": "vite build",
+    "build": "tsup && prettier --write ./dist",
     "test": "vitest"
   }
 }
