--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "cross-env VITE_CJS_IGNORE_WARNING=true pnpm -r --stream --filter=@tomjs/* build",
-    "test": "cross-env VITE_CJS_IGNORE_WARNING=true vitest",
+    "build": "pnpm -r --stream --filter=@tomjs/* build",
+    "test": "vitest",
     "lint": "run-s lint:eslint lint:prettier",
     "lint:eslint": "eslint \"packages/**/*.ts\" *.{js,cjs,ts} --fix --cache",
     "lint:prettier": "prettier --write .",
@@ -32,11 +32,9 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.7",
+    "tsup": "^8.1.0",
     "tsx": "^4.10.5",
     "typescript": "~5.4.5",
-    "vite": "^5.2.11",
-    "vite-plugin-dts": "^3.9.1",
-    "vite-plugin-target": "^0.1.1",
     "vitest": "^1.6.0"
   }
 }
