chore(pkg): update keywords

--- a/packages/pkg/package.json
+++ b/packages/pkg/package.json
@@ -5,7 +5,13 @@
   "engines": {
     "node": ">=16"
   },
-  "keywords": [],
+  "keywords": [
+    "package",
+    "pkg",
+    "npm",
+    "yarn",
+    "pnpm"
+  ],
   "author": {
     "name": "Tom Gao",
     "email": "tom@tomgao.cc"
