fix: run build script before publish

--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -43,7 +43,8 @@
   },
   "scripts": {
     "build": "tsup && prettier --write ./dist",
-    "test": "vitest"
+    "test": "vitest",
+    "prepublishOnly": "pnpm build"
   },
   "dependencies": {
     "chalk": "^4.1.2",
