--- a/packages/pkg/package.json
+++ b/packages/pkg/package.json
@@ -41,7 +41,8 @@
   },
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsup"
+    "build": "tsup",
+    "prepublishOnly": "pnpm build"
   },
   "dependencies": {
     "@tomjs/node": "^2.2.0",
