--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -44,6 +44,7 @@
   },
   "scripts": {
     "build": "tsup && prettier --write ./dist",
-    "test": "vitest"
+    "test": "vitest",
+    "prepublishOnly": "pnpm build"
   }
 }
