--- a/package.json
+++ b/package.json
@@ -1,40 +1,35 @@
 {
   "name": "@tomjs/utils-packages",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
+  "packageManager": "pnpm@10.10.0",
   "description": "A collection of functions for `node.js` and `web` projects.",
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "pnpm@10.10.0",
   "workspaces": [
     "packages/*"
   ],
   "scripts": {
     "build": "pnpm -r --stream --filter=@tomjs/* build",
     "test": "vitest",
-    "lint": "run-s lint:eslint lint:prettier",
-    "lint:eslint": "eslint \"packages/**/*.ts\" *.{js,cjs,ts} --fix --cache",
-    "lint:prettier": "prettier --write .",
-    "prepare": "husky"
+    "lint": "eslint --fix",
+    "prepare": "simple-git-hooks"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@tomjs/commitlint": "^3.2.0",
-    "@tomjs/eslint": "^3.0.1",
-    "@tomjs/prettier": "^1.4.1",
-    "@tomjs/tsconfig": "^1.6.0",
-    "@types/node": "^18.19.33",
+    "@commitlint/cli": "^19.8.1",
+    "@tomjs/commitlint": "^4.0.0",
+    "@tomjs/eslint": "^5.1.0",
+    "@tomjs/tsconfig": "^2.0.0",
+    "@types/node": "^18.19.103",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5",
-    "rimraf": "^5.0.7",
-    "tsup": "^8.1.0",
-    "tsx": "^4.10.5",
-    "typescript": "~5.4.5",
-    "vitest": "^1.6.0"
+    "eslint": "^9.27.0",
+    "lint-staged": "^16.0.0",
+    "rimraf": "^5.0.10",
+    "simple-git-hooks": "^2.13.0",
+    "tsup": "^8.5.0",
+    "tsx": "^4.19.4",
+    "typescript": "~5.8.3",
+    "vitest": "^3.1.4"
   }
 }
