--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,31 +2,36 @@
   "name": "@tomjs/utils",
   "version": "1.2.3",
   "description": "Pure 'JavaScript' library that can run in the 'browser' and 'node.js'",
-  "keywords": [
-    "utils",
-    "node",
-    "browser"
-  ],
   "author": {
     "name": "Tom Gao",
     "email": "tom@tomgao.cc"
   },
   "license": "MIT",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tomjs/utils.git",
+    "directory": "packages/utils"
+  },
+  "keywords": [
+    "utils",
+    "node",
+    "browser"
+  ],
   "exports": {
     ".": {
-      "require": {
-        "default": "./dist/index.js",
-        "types": "./dist/index.d.ts"
-      },
       "import": {
-        "default": "./dist/index.mjs",
-        "types": "./dist/index.d.mts"
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
       }
     }
   },
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -36,11 +41,6 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tomjs/utils.git",
-    "directory": "packages/utils"
   },
   "scripts": {
     "build": "tsup && prettier --write ./dist",
