--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -46,5 +46,8 @@
     "build": "tsup && prettier --write ./dist",
     "test": "vitest",
     "prepublishOnly": "pnpm build"
+  },
+  "dependencies": {
+    "es-toolkit": "^1.38.0"
   }
 }
