chore: change build config and script

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -42,7 +42,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "build": "tsup && prettier --write ./dist",
+    "build": "tsup",
     "test": "vitest",
     "prepublishOnly": "pnpm build"
   }
