--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -42,7 +42,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsdown",
     "test": "vitest",
     "prepublishOnly": "pnpm build"
   },
