--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -36,18 +36,18 @@
     "dist"
   ],
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsdown",
     "test": "vitest",
     "prepublishOnly": "pnpm build"
   },
   "dependencies": {
-    "es-toolkit": "^1.38.0"
+    "es-toolkit": "^1.39.10"
   }
 }
